quick_tests/cases/pass/p29_while_loop_counter_with_return.webx
fn main() -> i32 { let x: i32 = 0; while x < 5 { println(x); return x; } return 0; }