quick_tests/cases/fail/f04_missing_semicolon_after_let.webx
fn main() -> i32 {
    let x: i32 = 5
    println(x)
    return 0;
}